--- a/account/api-keys.html
+++ b/account/api-keys.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <!--
 Author: Keenthemes
-Product Name: Metronic 
+Product Name: Metronic
 Product Version: 8.2.3
 Purchase: https://1.envato.market/EA4JP
 Website: http://www.keenthemes.com
@@ -15,18 +15,9 @@ License: For each use you must have a valid license purchased only from above li
 <html lang="en">
 	<!--begin::Head-->
 	<head>
-<base href="../" />
-		<title>Metronic - The World's #1 Selling Bootstrap Admin Template by KeenThemes</title>
+		<base href="../" />
+		<title>Admin Template</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="The most advanced Bootstrap 5 Admin Theme with 40 unique prebuilt layouts on Themeforest trusted by 100,000 beginners and professionals. Multi-demo, Dark Mode, RTL support and complete React, Angular, Vue, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel versions. Grab your copy now and get life-time updates for free." />
-		<meta name="keywords" content="metronic, bootstrap, bootstrap 5, angular, VueJs, React, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel starter kits, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta property="og:locale" content="en_US" />
-		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Metronic - The World's #1 Selling Bootstrap Admin Template by KeenThemes" />
-		<meta property="og:url" content="https://keenthemes.com/metronic" />
-		<meta property="og:site_name" content="Metronic by Keenthemes" />
-		<link rel="canonical" href="https://preview.keenthemes.com/metronic8" />
 		<link rel="shortcut icon" href="assets/media/logos/favicon.ico" />
 		<!--begin::Fonts(mandatory for all pages)-->
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
@@ -859,7 +850,7 @@ License: For each use you must have a valid license purchased only from above li
 												<!--end::Avatar-->
 												<!--begin::Username-->
 												<div class="d-flex flex-column">
-													<div class="fw-bold d-flex align-items-center fs-5">Max Smith 
+													<div class="fw-bold d-flex align-items-center fs-5">Max Smith
 													<span class="badge badge-light-success fw-bold fs-8 px-2 py-1 ms-2">Pro</span></div>
 													<a href="#" class="fw-semibold text-muted text-hover-primary fs-7">max@kt.com</a>
 												</div>
@@ -910,7 +901,7 @@ License: For each use you must have a valid license purchased only from above li
 												<!--end::Menu item-->
 												<!--begin::Menu item-->
 												<div class="menu-item px-3">
-													<a href="account/statements.html" class="menu-link d-flex flex-stack px-5">Statements 
+													<a href="account/statements.html" class="menu-link d-flex flex-stack px-5">Statements
 													<span class="ms-2 lh-0" data-bs-toggle="tooltip" title="View your statements">
 														<i class="ki-duotone ki-information-5 fs-5">
 															<span class="path1"></span>
@@ -948,8 +939,8 @@ License: For each use you must have a valid license purchased only from above li
 										<!--begin::Menu item-->
 										<div class="menu-item px-5" data-kt-menu-trigger="{default: 'click', lg: 'hover'}" data-kt-menu-placement="left-start" data-kt-menu-offset="-15px, 0">
 											<a href="#" class="menu-link px-5">
-												<span class="menu-title position-relative">Language 
-												<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English 
+												<span class="menu-title position-relative">Language
+												<span class="fs-8 rounded bg-light px-3 py-2 position-absolute translate-middle-y top-50 end-0">English
 												<img class="w-15px h-15px rounded-1 ms-2" src="assets/media/flags/united-states.svg" alt="" /></span></span>
 											</a>
 											<!--begin::Menu sub-->
@@ -1016,7 +1007,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--begin::Chat-->
 								<div class="d-flex align-items-center ms-3 ms-lg-4">
 									<!--begin::Drawer wrapper-->
-									<div class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-active-bg-light w-30px h-30px w-lg-40px h-lg-40px fw-bold position-relative" id="kt_drawer_chat_toggle">3 
+									<div class="btn btn-icon btn-color-gray-700 btn-active-color-primary btn-outline btn-active-bg-light w-30px h-30px w-lg-40px h-lg-40px fw-bold position-relative" id="kt_drawer_chat_toggle">3
 									<!--begin::Bullet-->
 									<span class="d-none bullet bullet-dot bg-danger h-6px w-6px position-absolute translate-middle top-0 start-50 animation-blink"></span>
 									<!--end::Bullet--></div>
@@ -4062,7 +4053,7 @@ License: For each use you must have a valid license purchased only from above li
 														<span class="indicator-label">Follow</span>
 														<!--end::Indicator label-->
 														<!--begin::Indicator progress-->
-														<span class="indicator-progress">Please wait... 
+														<span class="indicator-progress">Please wait...
 														<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 														<!--end::Indicator progress-->
 													</a>
@@ -4086,7 +4077,7 @@ License: For each use you must have a valid license purchased only from above li
 															<!--end::Menu item-->
 															<!--begin::Menu item-->
 															<div class="menu-item px-3">
-																<a href="#" class="menu-link flex-stack px-3">Create Payment 
+																<a href="#" class="menu-link flex-stack px-3">Create Payment
 																<span class="ms-2" data-bs-toggle="tooltip" title="Specify a target name for future usage and reference">
 																	<i class="ki-duotone ki-information fs-6">
 																		<span class="path1"></span>
@@ -4313,7 +4304,7 @@ License: For each use you must have a valid license purchased only from above li
 										<!--begin::Col-->
 										<div class="col-md-6 pb-10 pb-lg-0">
 											<h2>How to set API</h2>
-											<p class="fs-6 fw-semibold text-gray-600 py-2">Use images to enhance your post, improve its flow, add humor 
+											<p class="fs-6 fw-semibold text-gray-600 py-2">Use images to enhance your post, improve its flow, add humor
 											<br />and explain complex topics</p>
 											<a href="#" class="btn btn-light btn-active-light-primary">Get Started</a>
 										</div>
@@ -4321,7 +4312,7 @@ License: For each use you must have a valid license purchased only from above li
 										<!--begin::Col-->
 										<div class="col-md-6">
 											<h2>Developer Tools</h2>
-											<p class="fs-6 fw-semibold text-gray-600 py-2">Plan your blog post by choosing a topic, creating an outline conduct 
+											<p class="fs-6 fw-semibold text-gray-600 py-2">Plan your blog post by choosing a topic, creating an outline conduct
 											<br />research, and checking facts</p>
 											<a href="#" class="btn btn-light btn-active-light-primary">Create Rule</a>
 										</div>
@@ -4338,7 +4329,7 @@ License: For each use you must have a valid license purchased only from above li
 										<div class="d-flex flex-stack flex-grow-1">
 											<!--begin::Content-->
 											<div class="fw-semibold">
-												<div class="fs-6 text-gray-700">Two-factor authentication adds an extra layer of security to your account. To log in, in you'll need to provide a 4 digit amazing and create outstanding products to serve your clients 
+												<div class="fs-6 text-gray-700">Two-factor authentication adds an extra layer of security to your account. To log in, in you'll need to provide a 4 digit amazing and create outstanding products to serve your clients
 												<a class="fw-bold" href="#">Learn More</a>.</div>
 											</div>
 											<!--end::Content-->
@@ -5028,8 +5019,8 @@ License: For each use you must have a valid license purchased only from above li
 									<!--begin::Timeline heading-->
 									<div class="pe-3 mb-5">
 										<!--begin::Title-->
-										<div class="fs-5 fw-semibold mb-2">Task 
-										<a href="#" class="text-primary fw-bold me-1">#45890</a>merged with 
+										<div class="fs-5 fw-semibold mb-2">Task
+										<a href="#" class="text-primary fw-bold me-1">#45890</a>merged with
 										<a href="#" class="text-primary fw-bold me-1">#45890</a>in “Ads Pro Admin Dashboard project:</div>
 										<!--end::Title-->
 										<!--begin::Description-->
@@ -5154,7 +5145,7 @@ License: For each use you must have a valid license purchased only from above li
 									<!--begin::Timeline heading-->
 									<div class="pe-3 mb-5">
 										<!--begin::Title-->
-										<div class="fs-5 fw-semibold mb-2">New case 
+										<div class="fs-5 fw-semibold mb-2">New case
 										<a href="#" class="text-primary fw-bold me-1">#67890</a>is assigned to you in Multi-platform Database Design project</div>
 										<!--end::Title-->
 										<!--begin::Description-->
@@ -5263,7 +5254,7 @@ License: For each use you must have a valid license purchased only from above li
 									<!--begin::Timeline heading-->
 									<div class="pe-3 mb-5">
 										<!--begin::Title-->
-										<div class="fs-5 fw-semibold mb-2">New order 
+										<div class="fs-5 fw-semibold mb-2">New order
 										<a href="#" class="text-primary fw-bold me-1">#67890</a>is placed for Workshow Planning & Budget Estimation</div>
 										<!--end::Title-->
 										<!--begin::Description-->
@@ -5290,7 +5281,7 @@ License: For each use you must have a valid license purchased only from above li
 				<!--end::Body-->
 				<!--begin::Footer-->
 				<div class="card-footer py-5 text-center" id="kt_activities_footer">
-					<a href="pages/user-profile/activity.html" class="btn btn-bg-body text-primary">View All Activities 
+					<a href="pages/user-profile/activity.html" class="btn btn-bg-body text-primary">View All Activities
 					<i class="ki-duotone ki-arrow-right fs-3 text-primary">
 						<span class="path1"></span>
 						<span class="path2"></span>
@@ -5347,7 +5338,7 @@ License: For each use you must have a valid license purchased only from above li
 								<!--end::Menu item-->
 								<!--begin::Menu item-->
 								<div class="menu-item px-3">
-									<a href="#" class="menu-link flex-stack px-3" data-bs-toggle="modal" data-bs-target="#kt_modal_invite_friends">Invite Contacts 
+									<a href="#" class="menu-link flex-stack px-3" data-bs-toggle="modal" data-bs-target="#kt_modal_invite_friends">Invite Contacts
 									<span class="ms-2" data-bs-toggle="tooltip" title="Specify a contact email to send an invitation">
 										<i class="ki-duotone ki-information fs-7">
 											<span class="path1"></span>
@@ -5533,7 +5524,7 @@ License: For each use you must have a valid license purchased only from above li
 								</div>
 								<!--end::User-->
 								<!--begin::Text-->
-								<div class="p-5 rounded bg-light-info text-gray-900 fw-semibold mw-lg-400px text-start" data-kt-element="message-text">You can unwatch this repository immediately by clicking here: 
+								<div class="p-5 rounded bg-light-info text-gray-900 fw-semibold mw-lg-400px text-start" data-kt-element="message-text">You can unwatch this repository immediately by clicking here:
 								<a href="https://keenthemes.com">Keenthemes.com</a></div>
 								<!--end::Text-->
 							</div>
@@ -6025,7 +6016,7 @@ License: For each use you must have a valid license purchased only from above li
 										<!--begin::Content-->
 										<div class="fw-semibold">
 											<h4 class="text-gray-900 fw-bold">Please Note!</h4>
-											<div class="fs-6 text-gray-700">Adding new API key may afftect to your 
+											<div class="fs-6 text-gray-700">Adding new API key may afftect to your
 											<a href="#">Affiliate Income</a></div>
 										</div>
 										<!--end::Content-->
@@ -6140,7 +6131,7 @@ License: For each use you must have a valid license purchased only from above li
 							<!--begin::Button-->
 							<button type="submit" id="kt_modal_create_api_key_submit" class="btn btn-primary">
 								<span class="indicator-label">Submit</span>
-								<span class="indicator-progress">Please wait... 
+								<span class="indicator-progress">Please wait...
 								<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 							</button>
 							<!--end::Button-->
@@ -6215,7 +6206,7 @@ License: For each use you must have a valid license purchased only from above li
 											<h2 class="mb-3">Deal Type</h2>
 											<!--end::Title-->
 											<!--begin::Description-->
-											<div class="text-muted fw-semibold fs-5">If you need more info, please check out 
+											<div class="text-muted fw-semibold fs-5">If you need more info, please check out
 											<a href="#" class="link-primary fw-bold">FAQ Page</a>.</div>
 											<!--end::Description-->
 										</div>
@@ -6277,7 +6268,7 @@ License: For each use you must have a valid license purchased only from above li
 										<div class="d-flex justify-content-end">
 											<button type="button" class="btn btn-lg btn-primary" data-kt-element="type-next">
 												<span class="indicator-label">Offer Details</span>
-												<span class="indicator-progress">Please wait... 
+												<span class="indicator-progress">Please wait...
 												<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 											</button>
 										</div>
@@ -6296,7 +6287,7 @@ License: For each use you must have a valid license purchased only from above li
 											<h2 class="mb-3">Deal Details</h2>
 											<!--end::Title-->
 											<!--begin::Description-->
-											<div class="text-muted fw-semibold fs-5">If you need more info, please check out 
+											<div class="text-muted fw-semibold fs-5">If you need more info, please check out
 											<a href="#" class="link-primary fw-bold">FAQ Page</a>.</div>
 											<!--end::Description-->
 										</div>
@@ -6398,7 +6389,7 @@ License: For each use you must have a valid license purchased only from above li
 											<button type="button" class="btn btn-lg btn-light me-3" data-kt-element="details-previous">Deal Type</button>
 											<button type="button" class="btn btn-lg btn-primary" data-kt-element="details-next">
 												<span class="indicator-label">Financing</span>
-												<span class="indicator-progress">Please wait... 
+												<span class="indicator-progress">Please wait...
 												<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 											</button>
 										</div>
@@ -6417,7 +6408,7 @@ License: For each use you must have a valid license purchased only from above li
 											<h2 class="mb-3">Finance</h2>
 											<!--end::Title-->
 											<!--begin::Description-->
-											<div class="text-muted fw-semibold fs-5">If you need more info, please check out 
+											<div class="text-muted fw-semibold fs-5">If you need more info, please check out
 											<a href="#" class="link-primary fw-bold">FAQ Page</a>.</div>
 											<!--end::Description-->
 										</div>
@@ -6535,7 +6526,7 @@ License: For each use you must have a valid license purchased only from above li
 											<button type="button" class="btn btn-lg btn-light me-3" data-kt-element="finance-previous">Project Settings</button>
 											<button type="button" class="btn btn-lg btn-primary" data-kt-element="finance-next">
 												<span class="indicator-label">Build Team</span>
-												<span class="indicator-progress">Please wait... 
+												<span class="indicator-progress">Please wait...
 												<span class="spinner-border spinner-border-sm align-middle ms-2"></span></span>
 											</button>
 										</div>
@@ -6554,7 +6545,7 @@ License: For each use you must have a valid license purchased only from above li
 											<h2 class="mb-3">Deal Created!</h2>
 											<!--end::Title-->
 											<!--begin::Description-->
-											<div class="text-muted fw-semibold fs-5">If you need more info, please check out 
+											<div class="text-muted fw-semibold fs-5">If you need more info, please check out
 											<a href="#" class="link-primary fw-bold">FAQ Page</a>.</div>
 											<!--end::Description-->
 										</div>
@@ -7404,7 +7395,7 @@ License: For each use you must have a valid license purchased only from above li
 							<h1 class="mb-3">Invite a Friend</h1>
 							<!--end::Title-->
 							<!--begin::Description-->
-							<div class="text-muted fw-semibold fs-5">If you need more info, please check out 
+							<div class="text-muted fw-semibold fs-5">If you need more info, please check out
 							<a href="#" class="link-primary fw-bold">FAQ Page</a>.</div>
 							<!--end::Description-->
 						</div>
